prevent more overlap

--- a/work/hype/site/css/layouts/splash-page.css
+++ b/work/hype/site/css/layouts/splash-page.css
@@ -14,7 +14,7 @@
   background-position: bottom;
   background-size: 100% auto;
   /*min-height: 365px;*/
-  min-height: 400px;
+  min-height: 575px;
   /*max-height: 90vh;*/
 }
 
@@ -25,7 +25,8 @@
   background-repeat: no-repeat;
   width: 100%;
   height: 60%;
-  min-height: 257px;
+  min-height: 375px;
+  /*min-height: 257px;*/
 }
 
 .menu-link {
